--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
     "bootstrap": "^5.1.3",
+    "firebase": "^8.8.1",
+    "node-sass": "^4.14.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
-    "recharts": "^2.1.6",
-    "node-sass": "^4.14.1",
-    "firebase": "^8.8.1",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
